[gd_scene load_steps=4 format=3 uid="uid://cytu2uhmjhl4e"]

[ext_resource type="Script" path="res://Scenes/Settings/settings.gd" id="1_j8sev"]
[ext_resource type="FontFile" uid="uid://ch1yfvb3bpbgv" path="res://Assets/Font/Sedgwick_Ave/SedgwickAve-Regular.ttf" id="1_vvgm5"]

[sub_resource type="LabelSettings" id="LabelSettings_s5kvq"]
font = ExtResource("1_vvgm5")
font_size = 48

[node name="Settings" type="Control" node_paths=PackedStringArray("story_folder_file_dialog", "story_folder_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8sev")
story_folder_file_dialog = NodePath("StoryFolderFileDialog")
story_folder_button = NodePath("ScrollContainer/SettingsArea/StoryFolder/OpenStoryFolderFileDialogButton")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1600, 800)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -800.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 25.0
offset_right = 415.0
offset_bottom = 85.0
text = "Settings"
label_settings = SubResource("LabelSettings_s5kvq")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 30.0
offset_right = 76.0
offset_bottom = 70.0
text = "Return"

[node name="FinishButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 30.0
offset_right = -15.0
offset_bottom = 61.0
grow_horizontal = 0
text = "Finish"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(1400, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -310.0
offset_right = 700.0
offset_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsArea" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StoryFolder" type="HBoxContainer" parent="ScrollContainer/SettingsArea"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/SettingsArea/StoryFolder"]
layout_mode = 2
text = "Story Folder Location:"

[node name="OpenStoryFolderFileDialogButton" type="Button" parent="ScrollContainer/SettingsArea/StoryFolder"]
layout_mode = 2
size_flags_horizontal = 3
text = "Set Directory"
text_overrun_behavior = 3
clip_text = true

[node name="StoryFolderFileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(900, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="FinishButton" to="." method="_on_finish_button_pressed"]
[connection signal="pressed" from="ScrollContainer/SettingsArea/StoryFolder/OpenStoryFolderFileDialogButton" to="." method="_on_open_story_folder_file_dialog_button_pressed"]
[connection signal="dir_selected" from="StoryFolderFileDialog" to="." method="_on_story_folder_file_dialog_dir_selected"]
